# ping-monitor

./: .gitignore  AGENTS.md  DESIGN.md  README.md  main.py  ping_monitor.py  pyproject.toml  requirements.txt  run.vbs  setup.bat
src/core/: config.py  ping_monitor.py  ping_service.py
src/gui/: main_window.py  system_tray.py
src/gui/components/: server_tab.py
src/gui/dialogs/: first_run.py
src/gui/utils/: animations.py  icon_painter.py  toast_manager.py
src/utils/: app_logger.py  deviation_logger.py  instance_lock.py  ping_spike_logger.py  statistics.py
